src/test/resources/frontendReference/invalid/syntaxErr/if/ifiErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:6 -- mismatched input 'true' expecting {'[', '='}
1 parser error(s) detected, no further compilation attempted.
